--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,11 @@
-/* styles go here */
+.fieldset {
+  margin-bottom: 20px;
+}
+
+.form-field {
+  margin-bottom: 10px;
+}
+
+.form-field-last {
+  margin: 0;
+}
